--- a/MVC_Testbed/Views/Bourbons/Edit.cshtml
+++ b/MVC_Testbed/Views/Bourbons/Edit.cshtml
@@ -19,8 +19,8 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DistilleryId" class="control-label"></label>
-                <select asp-for="DistilleryId" class="form-control" asp-items="ViewBag.DistilleryId"></select>
+                <label asp-for="Distillery" class="control-label"></label>
+                <select asp-for="DistilleryId" class="form-control" asp-items="ViewBag.Distillery"></select>
                 <span asp-validation-for="DistilleryId" class="text-danger"></span>
             </div>
             <div class="form-group">
