Did the same razzle dazzle for ratings (stuff now shows by name instead of ID, and is linked

--- a/MVC_Testbed/Views/BourbonRatings/Create.cshtml
+++ b/MVC_Testbed/Views/BourbonRatings/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="BourbonId" class="control-label"></label>
-                <select asp-for="BourbonId" class ="form-control" asp-items="ViewBag.BourbonId"></select>
+                <select asp-for="BourbonId" class ="form-control" asp-items="ViewBag.Bourbon"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
