--- a/MVC_Testbed/Views/BourbonRatings/Details.cshtml
+++ b/MVC_Testbed/Views/BourbonRatings/Details.cshtml
@@ -7,14 +7,14 @@
 <h1>Details</h1>
 
 <div>
-    <h4>BourbonRating</h4>
+    <h4>Rating</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Bourbon)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Bourbon.Id)
+        <dd class="col-sm-10">
+            @Html.ActionLink(Model.Bourbon.Name, "Details", "Bourbons", new { Model.Bourbon.Id }, null)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
