--- a/MVC_Testbed/Views/BourbonRatings/Edit.cshtml
+++ b/MVC_Testbed/Views/BourbonRatings/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="BourbonId" class="control-label"></label>
-                <select asp-for="BourbonId" class="form-control" asp-items="ViewBag.BourbonId"></select>
+                <select asp-for="BourbonId" class="form-control" asp-items="ViewBag.Bourbon"></select>
                 <span asp-validation-for="BourbonId" class="text-danger"></span>
             </div>
             <div class="form-group">
