Made more plaintext into links, added links to the various indices on the home page, added a privacy policy, and added text to distinguish which index you're on.

--- a/MVC_Testbed/Views/Home/Index.cshtml
+++ b/MVC_Testbed/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome, Ben</h1>
-
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome, Ben</h1>
+        <p><a asp-action="Index" asp-controller="Distilleries">Distilleries</a></p>
+        <p><a asp-action="Index" asp-controller="Bourbons">Bourbons</a></p>
+        <p><a asp-action="Index" asp-controller="BourbonRatings">Ratings</a></p>
+    </div>
