--- a/MVC_Testbed/Views/Home/Privacy.cshtml
+++ b/MVC_Testbed/Views/Home/Privacy.cshtml
@@ -3,4 +3,5 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>We live in a post-privacy world now. If you're not paying for a service, it's because you're not the consumer, you're the product.</p>
+<p>Abandon hope all ye who enter here.</p>
