--- a/MVC_Testbed/Views/BourbonRatings/Index.cshtml
+++ b/MVC_Testbed/Views/BourbonRatings/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Ratings Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -31,14 +31,13 @@
                 @Html.ActionLink(item.Bourbon.Name, "Details", "Bourbons", new { item.Bourbon.Id }, null)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Rating)
+                <a asp-action="Details" asp-route-id="@item.Id">@item.Rating</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TastingDate)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
