--- a/MVC_Testbed/Views/Bourbons/Details.cshtml
+++ b/MVC_Testbed/Views/Bourbons/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.ActionLink(Model.Distillery.Name, "Details", "Distilleries", new { Model.Distillery.Id }, null)
         </dd>
+        <dt class="col-sm-2">
+            Average Rating
+        </dt>
+        <dd class="col-sm-10">
+            @ViewData["AverageRating"]
+        </dd>
     </dl>
     <dl class="row">
         <dt class="col-sm-2">Ratings</dt>
